--- a/client/components/chats/view-chat.html
+++ b/client/components/chats/view-chat.html
@@ -12,4 +12,26 @@
       </div>
     </div>
   </ion-content>
+  <ion-footer-bar keyboard-attach class="bar-stable footer-chat item-input-inset">
+    <button class="button button-clear button-icon button-positive icon ion-ios-upload-outline"></button>
+ 
+    <label class="item-input-wrapper">
+      <input
+              ng-model="viewChat.message"
+              dir="auto"
+              type="text"
+              on-return="chat.sendMessage(); chat.closeKeyboard()"
+              on-focus="chat.inputUp()"
+              on-blur="chat.inputDown()"/>
+    </label>
+ 
+    <span ng-if="viewChat.message.length > 0">
+      <button ng-click="viewChat.sendMessage()" class="button button-clear button-positive">Send</button>
+    </span>
+    <span ng-if="!viewChat.message || viewChat.message.length === 0">
+      <button class="button button-clear button-icon button-positive icon ion-ios-camera-outline"></button>
+      <i class="buttons-seperator icon ion-android-more-vertical"></i>
+      <button class="button button-clear button-icon button-positive icon ion-ios-mic-outline"></button>
+    </span>
+  </ion-footer-bar>
 </ion-view>
