--- a/client/components/users/view-user.html
+++ b/client/components/users/view-user.html
@@ -6,8 +6,12 @@
   </ion-nav-buttons>
  
   <ion-content class="profile">
-    <a class="profile-picture positive">
-      <div class="upload-placehoder">
+    <a class="profile-picture positive" ng-click="viewUser.updatePicture()">
+      <div ng-if="viewUser.currentUser.profile.picture">
+        <img ng-src="{{ viewUser.currentUser.profile.picture }}" alt="profile picture">
+        edit
+      </div>
+      <div ng-if="!viewUser.currentUser.profile.picture" class="upload-placehoder">
         Add photo
       </div>
     </a>
